force-app/main/default/objects/ssot__OrderDeliveryMethod__dlm/ssot__OrderDeliveryMethod__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <description>Standardized methods for transferring purchased products or services to the destination of fulfillment. Delivery methods are characterized by the means of transportation used, and by the delivering organization or group.</description>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Sales Order</referenceEntityGroup>
        <referenceEntityName>OrderDeliveryMethod</referenceEntityName>
        <referenceEntitySubjectArea>Sales Order</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>