force-app/main/default/objects/ssot__OrderDeliveryMethod__dlm/fields/ssot__ExternalSourceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExternalSourceId__c</fullName>
    <label>External Source Id</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExternalSourceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>