force-app/main/default/objects/ssot__OrderDeliveryMethod__dlm/fields/ssot__OrderDeliverySupplierAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OrderDeliverySupplierAccountId__c</fullName>
    <label>Order Delivery Supplier Account</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OrderDeliverySupplierAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>