force-app/main/default/objects/ssot__OrderDeliveryMethod__dlm/fields/ssot__rel_1697761155306_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761155306_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BundleProduct_Id_map_OrderDeliveryMe_rel</label>
    <referenceTo>ssot__BundleProduct__dlm</referenceTo>
    <relationshipLabel>BundleProduct_Id_map_OrderDeliveryMe_rel</relationshipLabel>
    <relationshipName>rel_1697761155306_end</relationshipName>
    <type>Lookup</type>
</CustomField>